--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-refresher",
+  "name": "react-refresher-may2022",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
